[tool.poetry]
name = "trading"
version = "0.1.0"
description = "Trading infrastructure"
authors = ["Wonjae Choi <choi@wonj.me>"]
readme = "README.md"
license = ""
repository = "https://github.com/wonj1012/trading"
packages = [
    { include = "commands", from = "src" },
    { include = "indicators", from = "src" },
    { include = "market_data", from = "src" },
    { include = "strategies", from = "src" },
    { include = "trading_bot", from = "src" },
    { include = "utils", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.12.0"
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
